--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,17 +8,21 @@ body
     height: 40px;
     color:papayawhip;
     background: #464646;
+    position:fixed;
+    top:0;
+    width:100%;
 }
 
 #nav ul {
     list-style:none;
     margin-left: 130px;
+    bottom:20px;
 }
 
 #nav ul li{
     float:left;
     margin-left: 30px;
-    margin-top:10px;
+    margin-bottom:20px;
 }
 
 #nav ul li a{
@@ -44,9 +48,8 @@ body
     color:red;
     background: #FFFFFF;
     float: left;
-    margin-top:15px;
+    margin-top:55px;
     margin-left: 180px;
-    height: 500px;
 
 }
 
@@ -59,7 +62,7 @@ body
 
     float: left;
     margin-left: 10px;
-    margin-top:15px;
+    margin-top:55px;
 }
 
 #footer {
@@ -93,6 +96,9 @@ body
     margin-top:15px;
     /*background: #F7F7F7;*/
     background: #FFFFFF;
+}
 
-
+.current{
+    position:fixed;
+    top:0px;
 }
