--- a/public/css/index.css
+++ b/public/css/index.css
@@ -155,11 +155,18 @@ body
     margin-left:10px;
 }
 
+.float-left{
+    float:left;
+}
+
+.clear{
+    clear:both
+}
 .image-author .image{
     width:40px;
     height:40px;
     border-radius:100%;
-    /*overflow:hidden;*/
+    overflow:hidden;
 }
 .image-author{
     margin-left: 10px;
