--- a/public/css/index.css
+++ b/public/css/index.css
@@ -134,10 +134,19 @@ body
     margin-top:15px;
     background: #F7F7F7;
     border:1px solid #DDDDDD;
+}
 
+#right-recommend {
+    background: #F7F7F7;
+    border:1px solid #DDDDDD;
+    margin-top:15px;
 }
 
 
+#right-recommend .item .item-image{
+    height:180px;
+    width:302px;
+}
 
 .current{
     position:fixed;
